--- a/index.html
+++ b/index.html
@@ -118,7 +118,9 @@
                 position: absolute;
                 cursor: pointer;
                 transition: transform 0.1s;
+                outline: none;
             }
+            
 
             .target:hover {
                 transform: scale(1.05);
