--- a/index.html
+++ b/index.html
@@ -119,8 +119,11 @@
                 cursor: pointer;
                 transition: transform 0.1s;
                 outline: none;
+                -webkit-tap-highlight-color: transparent; /* Для WebKit браузеров (Chrome, Safari) */
+                -webkit-touch-callout: none; /* Блокирует контекстное меню на iOS */
+                -webkit-user-select: none; /* Запрещает выделение текста на iOS Safari */
+                user-select: none; /* Стандартное свойство для запрета выделения */
             }
-            
 
             .target:hover {
                 transform: scale(1.05);
@@ -199,7 +202,7 @@
                 // Настройки игрового процесса
                 gameplay: {
                     initialLives: 3,
-                    targetSpawnInterval: 1500, // 2 секунды
+                    targetSpawnInterval: 1000, // 2 секунды
                     initialTargetVisibilityTime: 1500, // 6 секунд
                     minTargetVisibilityTime: 300, // 300 мс
                     difficultyIncreaseStep: 5, // каждые 5 очков
